--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
+body {
+	background-color: #d3d3d3;
+	font-family: Helvetica;
+}
+
 .wrapper{
 	height: 800px;
 	width: 800px;
 	margin: 0 auto;
-	outline: 2px solid black;
 }
 
 .flex_row{
-	display: flex;
-	
+	display: flex;	
 }
 
 .flex_row .col {
 	flex: 1;
-	outline: 2px solid blue;
 }
 
 .title {
@@ -20,32 +22,61 @@
 	align-items: center;
 	justify-content: center;
 	width: 100%;
-	background: skyblue;
 	height: 100px;
 }
 
-.flex_center{
+.condition {
+	text-align: center;
+	font-size: 1.5em;
+}
+
+.flex_center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.temp{
+.temp {
 	height: 300px;
+	font-size: 2em;
 }
 
-.icon_area{
+.icon_area {
 	height: 300px;
+	font-size: 1.5em;
 }
 
+.change_unit {
+	display: block;
+	position: relative;
+	top: 10%;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.change_unit button {
+	margin: 0 auto;
+	background-color: tomato;
+	border: none;
+	font-weight: bold;
+	color: white;
+	font-size: 25px;
+	padding: 30px;
+}
 
 @media (max-width: 700px) {
-	.wrapper{
+	.wrapper {
 		width: 100%;
 		margin: 0;
 	}
-	.flex_row{
+	.flex_row {
 		display: block;
+	}
+	.temp {
+		height: 200px;
+	}
+	.icon_area {
+		height: 200px;
 	}
 }
 
